Compiler projects/Phase_3/src/ply_version/parser.out
Created by PLY version 3.11 (http://www.dabeaz.com/ply)

Unused terminals:

    CHAR
    DO
    FOR
    MAIN
    PLUSASSIGN

Grammar

Rule 0     S' -> start
Rule 1     start -> ClassDeclaration
Rule 2     start -> empty
Rule 3     start -> exp
Rule 4     start -> ClassDeclaration ClassDeclaration
Rule 5     ClassDeclaration -> CLASS IDENTIFIER LBRACE RBRACE
Rule 6     ClassDeclaration -> CLASS IDENTIFIER LBRACE MethodDeclaration RBRACE
Rule 7     ClassDeclaration -> CLASS IDENTIFIER LBRACE FieldDeclaration RBRACE
Rule 8     FieldDeclaration -> Declarators IDENTIFIER SEMICOLON
Rule 9     MethodDeclaration -> Declarators IDENTIFIER LPAREN RPAREN LBRACE statement RBRACE
Rule 10    MethodDeclaration -> Declarators IDENTIFIER LPAREN RPAREN LBRACE statement RETURN exp SEMICOLON RBRACE
Rule 11    MethodDeclaration -> Declarators IDENTIFIER LPAREN ParameterList RPAREN LBRACE statement RETURN exp SEMICOLON RBRACE
Rule 12    MethodDeclaration -> Declarators IDENTIFIER LPAREN ParameterList RPAREN LBRACE statement RBRACE
Rule 13    ParameterList -> Type IDENTIFIER
Rule 14    ParameterList -> Type IDENTIFIER COMMA Type IDENTIFIER
Rule 15    Declarators -> Type
Rule 16    Declarators -> STATIC Type
Rule 17    Declarators -> PUBLIC Type
Rule 18    Declarators -> PRIVATE Type
Rule 19    Declarators -> PUBLIC STATIC Type
Rule 20    Declarators -> PRIVATE STATIC Type
Rule 21    Type -> PrimeType
Rule 22    Type -> ClassType
Rule 23    Type -> arraytype
Rule 24    PrimeType -> INT
Rule 25    PrimeType -> BOOLEAN
Rule 26    PrimeType -> VOID
Rule 27    ClassType -> IDENTIFIER
Rule 28    arraytype -> INT LBRACKET RBRACKET
Rule 29    arraytype -> ClassType LBRACKET RBRACKET
Rule 30    argumentlist -> exp
Rule 31    argumentlist -> exp COMMA exp
Rule 32    Refrence -> THIS
Rule 33    Refrence -> IDENTIFIER
Rule 34    statement -> if_st
Rule 35    statement -> while_st
Rule 36    statement -> LBRACE statement RBRACE
Rule 37    statement -> Refrence LPAREN argumentlist RPAREN SEMICOLON
Rule 38    statement -> Refrence LPAREN RPAREN SEMICOLON
Rule 39    statement -> Refrence LBRACKET exp RBRACKET ASSIGN exp SEMICOLON
Rule 40    statement -> Refrence ASSIGN exp SEMICOLON
Rule 41    statement -> Type IDENTIFIER ASSIGN exp SEMICOLON
Rule 42    statement -> empty
Rule 43    statement -> statement statement
Rule 44    while_st -> WHILE LPAREN exp RPAREN statement
Rule 45    if_st -> IF LPAREN exp RPAREN statement
Rule 46    if_st -> IF LPAREN exp RPAREN statement ELSE statement
Rule 47    exp -> Refrence
Rule 48    exp -> Type exp
Rule 49    exp -> Refrence LBRACKET exp RBRACKET
Rule 50    exp -> Refrence LPAREN RPAREN
Rule 51    exp -> Refrence LPAREN argumentlist RPAREN
Rule 52    exp -> Unop exp
Rule 53    exp -> exp Binop exp
Rule 54    exp -> LPAREN exp RPAREN
Rule 55    exp -> NUMBER
Rule 56    exp -> TRUE
Rule 57    exp -> IDENTIFIER Binop NUMBER
Rule 58    exp -> FALSE
Rule 59    exp -> NEW IDENTIFIER LPAREN RPAREN
Rule 60    exp -> NEW INT LBRACKET exp RBRACKET
Rule 61    exp -> NEW IDENTIFIER LBRACKET exp RBRACKET
Rule 62    Unop -> NOT
Rule 63    Unop -> MINUS
Rule 64    Binop -> PLUS
Rule 65    Binop -> MINUS
Rule 66    Binop -> TIMES
Rule 67    Binop -> DIVIDE
Rule 68    Binop -> EQ
Rule 69    Binop -> NOT_EQ
Rule 70    Binop -> LT
Rule 71    Binop -> GT
Rule 72    Binop -> LE
Rule 73    Binop -> GE
Rule 74    Binop -> AND
Rule 75    Binop -> NOT
Rule 76    empty -> <empty>

Terminals, with rules where they appear

AND                  : 74
ASSIGN               : 39 40 41
BOOLEAN              : 25
CHAR                 : 
CLASS                : 5 6 7
COMMA                : 14 31
DIVIDE               : 67
DO                   : 
ELSE                 : 46
EQ                   : 68
FALSE                : 58
FOR                  : 
GE                   : 73
GT                   : 71
IDENTIFIER           : 5 6 7 8 9 10 11 12 13 14 14 27 33 41 57 59 61
IF                   : 45 46
INT                  : 24 28 60
LBRACE               : 5 6 7 9 10 11 12 36
LBRACKET             : 28 29 39 49 60 61
LE                   : 72
LPAREN               : 9 10 11 12 37 38 44 45 46 50 51 54 59
LT                   : 70
MAIN                 : 
MINUS                : 63 65
NEW                  : 59 60 61
NOT                  : 62 75
NOT_EQ               : 69
NUMBER               : 55 57
PLUS                 : 64
PLUSASSIGN           : 
PRIVATE              : 18 20
PUBLIC               : 17 19
RBRACE               : 5 6 7 9 10 11 12 36
RBRACKET             : 28 29 39 49 60 61
RETURN               : 10 11
RPAREN               : 9 10 11 12 37 38 44 45 46 50 51 54 59
SEMICOLON            : 8 10 11 37 38 39 40 41
STATIC               : 16 19 20
THIS                 : 32
TIMES                : 66
TRUE                 : 56
VOID                 : 26
WHILE                : 44
error                : 

Nonterminals, with rules where they appear

Binop                : 53 57
ClassDeclaration     : 1 4 4
ClassType            : 22 29
Declarators          : 8 9 10 11 12
FieldDeclaration     : 7
MethodDeclaration    : 6
ParameterList        : 11 12
PrimeType            : 21
Refrence             : 37 38 39 40 47 49 50 51
Type                 : 13 14 14 15 16 17 18 19 20 41 48
Unop                 : 52
argumentlist         : 37 51
arraytype            : 23
empty                : 2 42
exp                  : 3 10 11 30 31 31 39 39 40 41 44 45 46 48 49 52 53 53 54 60 61
if_st                : 34
start                : 0
statement            : 9 10 11 12 36 43 43 44 45 46 46
while_st             : 35

Parsing method: LALR

state 0

    (0) S' -> . start
    (1) start -> . ClassDeclaration
    (2) start -> . empty
    (3) start -> . exp
    (4) start -> . ClassDeclaration ClassDeclaration
    (5) ClassDeclaration -> . CLASS IDENTIFIER LBRACE RBRACE
    (6) ClassDeclaration -> . CLASS IDENTIFIER LBRACE MethodDeclaration RBRACE
    (7) ClassDeclaration -> . CLASS IDENTIFIER LBRACE FieldDeclaration RBRACE
    (76) empty -> .
    (47) exp -> . Refrence
    (48) exp -> . Type exp
    (49) exp -> . Refrence LBRACKET exp RBRACKET
    (50) exp -> . Refrence LPAREN RPAREN
    (51) exp -> . Refrence LPAREN argumentlist RPAREN
    (52) exp -> . Unop exp
    (53) exp -> . exp Binop exp
    (54) exp -> . LPAREN exp RPAREN
    (55) exp -> . NUMBER
    (56) exp -> . TRUE
    (57) exp -> . IDENTIFIER Binop NUMBER
    (58) exp -> . FALSE
    (59) exp -> . NEW IDENTIFIER LPAREN RPAREN
    (60) exp -> . NEW INT LBRACKET exp RBRACKET
    (61) exp -> . NEW IDENTIFIER LBRACKET exp RBRACKET
    (32) Refrence -> . THIS
    (33) Refrence -> . IDENTIFIER
    (21) Type -> . PrimeType
    (22) Type -> . ClassType
    (23) Type -> . arraytype
    (62) Unop -> . NOT
    (63) Unop -> . MINUS
    (24) PrimeType -> . INT
    (25) PrimeType -> . BOOLEAN
    (26) PrimeType -> . VOID
    (27) ClassType -> . IDENTIFIER
    (28) arraytype -> . INT LBRACKET RBRACKET
    (29) arraytype -> . ClassType LBRACKET RBRACKET

    CLASS           shift and go to state 5
    $end            reduce using rule 76 (empty -> .)
    LPAREN          shift and go to state 9
    NUMBER          shift and go to state 11
    TRUE            shift and go to state 12
    IDENTIFIER      shift and go to state 6
    FALSE           shift and go to state 13
    NEW             shift and go to state 14
    THIS            shift and go to state 16
    NOT             shift and go to state 20
    MINUS           shift and go to state 21
    INT             shift and go to state 15
    BOOLEAN         shift and go to state 22
    VOID            shift and go to state 23

    start                          shift and go to state 1
    ClassDeclaration               shift and go to state 2
    empty                          shift and go to state 3
    exp                            shift and go to state 4
    Refrence                       shift and go to state 7
    Type                           shift and go to state 8
    Unop                           shift and go to state 10
    PrimeType                      shift and go to state 17
    ClassType                      shift and go to state 18
    arraytype                      shift and go to state 19

state 1

    (0) S' -> start .



state 2

    (1) start -> ClassDeclaration .
    (4) start -> ClassDeclaration . ClassDeclaration
    (5) ClassDeclaration -> . CLASS IDENTIFIER LBRACE RBRACE
    (6) ClassDeclaration -> . CLASS IDENTIFIER LBRACE MethodDeclaration RBRACE
    (7) ClassDeclaration -> . CLASS IDENTIFIER LBRACE FieldDeclaration RBRACE

    $end            reduce using rule 1 (start -> ClassDeclaration .)
    CLASS           shift and go to state 5

    ClassDeclaration               shift and go to state 24

state 3

    (2) start -> empty .

    $end            reduce using rule 2 (start -> empty .)


state 4

    (3) start -> exp .
    (53) exp -> exp . Binop exp
    (64) Binop -> . PLUS
    (65) Binop -> . MINUS
    (66) Binop -> . TIMES
    (67) Binop -> . DIVIDE
    (68) Binop -> . EQ
    (69) Binop -> . NOT_EQ
    (70) Binop -> . LT
    (71) Binop -> . GT
    (72) Binop -> . LE
    (73) Binop -> . GE
    (74) Binop -> . AND
    (75) Binop -> . NOT

    $end            reduce using rule 3 (start -> exp .)
    PLUS            shift and go to state 26
    MINUS           shift and go to state 27
    TIMES           shift and go to state 28
    DIVIDE          shift and go to state 29
    EQ              shift and go to state 30
    NOT_EQ          shift and go to state 31
    LT              shift and go to state 32
    GT              shift and go to state 33
    LE              shift and go to state 34
    GE              shift and go to state 35
    AND             shift and go to state 36
    NOT             shift and go to state 37

    Binop                          shift and go to state 25

state 5

    (5) ClassDeclaration -> CLASS . IDENTIFIER LBRACE RBRACE
    (6) ClassDeclaration -> CLASS . IDENTIFIER LBRACE MethodDeclaration RBRACE
    (7) ClassDeclaration -> CLASS . IDENTIFIER LBRACE FieldDeclaration RBRACE

    IDENTIFIER      shift and go to state 38


state 6

    (57) exp -> IDENTIFIER . Binop NUMBER
    (33) Refrence -> IDENTIFIER .
    (27) ClassType -> IDENTIFIER .
    (64) Binop -> . PLUS
    (65) Binop -> . MINUS
    (66) Binop -> . TIMES
    (67) Binop -> . DIVIDE
    (68) Binop -> . EQ
    (69) Binop -> . NOT_EQ
    (70) Binop -> . LT
    (71) Binop -> . GT
    (72) Binop -> . LE
    (73) Binop -> . GE
    (74) Binop -> . AND
    (75) Binop -> . NOT

  ! reduce/reduce conflict for LBRACKET resolved using rule 27 (ClassType -> IDENTIFIER .)
  ! reduce/reduce conflict for LPAREN resolved using rule 27 (ClassType -> IDENTIFIER .)
  ! reduce/reduce conflict for NOT resolved using rule 27 (ClassType -> IDENTIFIER .)
  ! reduce/reduce conflict for MINUS resolved using rule 27 (ClassType -> IDENTIFIER .)
  ! shift/reduce conflict for PLUS resolved as shift
  ! shift/reduce conflict for MINUS resolved as shift
  ! shift/reduce conflict for TIMES resolved as shift
  ! shift/reduce conflict for DIVIDE resolved as shift
  ! shift/reduce conflict for EQ resolved as shift
  ! shift/reduce conflict for NOT_EQ resolved as shift
  ! shift/reduce conflict for LT resolved as shift
  ! shift/reduce conflict for GT resolved as shift
  ! shift/reduce conflict for LE resolved as shift
  ! shift/reduce conflict for GE resolved as shift
  ! shift/reduce conflict for AND resolved as shift
  ! shift/reduce conflict for NOT resolved as shift
    $end            reduce using rule 33 (Refrence -> IDENTIFIER .)
    RPAREN          reduce using rule 33 (Refrence -> IDENTIFIER .)
    RBRACKET        reduce using rule 33 (Refrence -> IDENTIFIER .)
    COMMA           reduce using rule 33 (Refrence -> IDENTIFIER .)
    SEMICOLON       reduce using rule 33 (Refrence -> IDENTIFIER .)
    LBRACKET        reduce using rule 27 (ClassType -> IDENTIFIER .)
    LPAREN          reduce using rule 27 (ClassType -> IDENTIFIER .)
    NUMBER          reduce using rule 27 (ClassType -> IDENTIFIER .)
    TRUE            reduce using rule 27 (ClassType -> IDENTIFIER .)
    IDENTIFIER      reduce using rule 27 (ClassType -> IDENTIFIER .)
    FALSE           reduce using rule 27 (ClassType -> IDENTIFIER .)
    NEW             reduce using rule 27 (ClassType -> IDENTIFIER .)
    THIS            reduce using rule 27 (ClassType -> IDENTIFIER .)
    INT             reduce using rule 27 (ClassType -> IDENTIFIER .)
    BOOLEAN         reduce using rule 27 (ClassType -> IDENTIFIER .)
    VOID            reduce using rule 27 (ClassType -> IDENTIFIER .)
    PLUS            shift and go to state 26
    MINUS           shift and go to state 27
    TIMES           shift and go to state 28
    DIVIDE          shift and go to state 29
    EQ              shift and go to state 30
    NOT_EQ          shift and go to state 31
    LT              shift and go to state 32
    GT              shift and go to state 33
    LE              shift and go to state 34
    GE              shift and go to state 35
    AND             shift and go to state 36
    NOT             shift and go to state 37

  ! LBRACKET        [ reduce using rule 33 (Refrence -> IDENTIFIER .) ]
  ! LPAREN          [ reduce using rule 33 (Refrence -> IDENTIFIER .) ]
  ! PLUS            [ reduce using rule 33 (Refrence -> IDENTIFIER .) ]
  ! MINUS           [ reduce using rule 33 (Refrence -> IDENTIFIER .) ]
  ! TIMES           [ reduce using rule 33 (Refrence -> IDENTIFIER .) ]
  ! DIVIDE          [ reduce using rule 33 (Refrence -> IDENTIFIER .) ]
  ! EQ              [ reduce using rule 33 (Refrence -> IDENTIFIER .) ]
  ! NOT_EQ          [ reduce using rule 33 (Refrence -> IDENTIFIER .) ]
  ! LT              [ reduce using rule 33 (Refrence -> IDENTIFIER .) ]
  ! GT              [ reduce using rule 33 (Refrence -> IDENTIFIER .) ]
  ! LE              [ reduce using rule 33 (Refrence -> IDENTIFIER .) ]
  ! GE              [ reduce using rule 33 (Refrence -> IDENTIFIER .) ]
  ! AND             [ reduce using rule 33 (Refrence -> IDENTIFIER .) ]
  ! NOT             [ reduce using rule 33 (Refrence -> IDENTIFIER .) ]
  ! NOT             [ reduce using rule 27 (ClassType -> IDENTIFIER .) ]
  ! MINUS           [ reduce using rule 27 (ClassType -> IDENTIFIER .) ]

    Binop                          shift and go to state 39

state 7

    (47) exp -> Refrence .
    (49) exp -> Refrence . LBRACKET exp RBRACKET
    (50) exp -> Refrence . LPAREN RPAREN
    (51) exp -> Refrence . LPAREN argumentlist RPAREN

    PLUS            reduce using rule 47 (exp -> Refrence .)
    MINUS           reduce using rule 47 (exp -> Refrence .)
    TIMES           reduce using rule 47 (exp -> Refrence .)
    DIVIDE          reduce using rule 47 (exp -> Refrence .)
    EQ              reduce using rule 47 (exp -> Refrence .)
    NOT_EQ          reduce using rule 47 (exp -> Refrence .)
    LT              reduce using rule 47 (exp -> Refrence .)
    GT              reduce using rule 47 (exp -> Refrence .)
    LE              reduce using rule 47 (exp -> Refrence .)
    GE              reduce using rule 47 (exp -> Refrence .)
    AND             reduce using rule 47 (exp -> Refrence .)
    NOT             reduce using rule 47 (exp -> Refrence .)
    $end            reduce using rule 47 (exp -> Refrence .)
    RPAREN          reduce using rule 47 (exp -> Refrence .)
    RBRACKET        reduce using rule 47 (exp -> Refrence .)
    COMMA           reduce using rule 47 (exp -> Refrence .)
    SEMICOLON       reduce using rule 47 (exp -> Refrence .)
    LBRACKET        shift and go to state 40
    LPAREN          shift and go to state 41


state 8

    (48) exp -> Type . exp
    (47) exp -> . Refrence
    (48) exp -> . Type exp
    (49) exp -> . Refrence LBRACKET exp RBRACKET
    (50) exp -> . Refrence LPAREN RPAREN
    (51) exp -> . Refrence LPAREN argumentlist RPAREN
    (52) exp -> . Unop exp
    (53) exp -> . exp Binop exp
    (54) exp -> . LPAREN exp RPAREN
    (55) exp -> . NUMBER
    (56) exp -> . TRUE
    (57) exp -> . IDENTIFIER Binop NUMBER
    (58) exp -> . FALSE
    (59) exp -> . NEW IDENTIFIER LPAREN RPAREN
    (60) exp -> . NEW INT LBRACKET exp RBRACKET
    (61) exp -> . NEW IDENTIFIER LBRACKET exp RBRACKET
    (32) Refrence -> . THIS
    (33) Refrence -> . IDENTIFIER
    (21) Type -> . PrimeType
    (22) Type -> . ClassType
    (23) Type -> . arraytype
    (62) Unop -> . NOT
    (63) Unop -> . MINUS
    (24) PrimeType -> . INT
    (25) PrimeType -> . BOOLEAN
    (26) PrimeType -> . VOID
    (27) ClassType -> . IDENTIFIER
    (28) arraytype -> . INT LBRACKET RBRACKET
    (29) arraytype -> . ClassType LBRACKET RBRACKET

    LPAREN          shift and go to state 9
    NUMBER          shift and go to state 11
    TRUE            shift and go to state 12
    IDENTIFIER      shift and go to state 6
    FALSE           shift and go to state 13
    NEW             shift and go to state 14
    THIS            shift and go to state 16
    NOT             shift and go to state 20
    MINUS           shift and go to state 21
    INT             shift and go to state 15
    BOOLEAN         shift and go to state 22
    VOID            shift and go to state 23

    Type                           shift and go to state 8
    exp                            shift and go to state 42
    Refrence                       shift and go to state 7
    Unop                           shift and go to state 10
    PrimeType                      shift and go to state 17
    ClassType                      shift and go to state 18
    arraytype                      shift and go to state 19

state 9

    (54) exp -> LPAREN . exp RPAREN
    (47) exp -> . Refrence
    (48) exp -> . Type exp
    (49) exp -> . Refrence LBRACKET exp RBRACKET
    (50) exp -> . Refrence LPAREN RPAREN
    (51) exp -> . Refrence LPAREN argumentlist RPAREN
    (52) exp -> . Unop exp
    (53) exp -> . exp Binop exp
    (54) exp -> . LPAREN exp RPAREN
    (55) exp -> . NUMBER
    (56) exp -> . TRUE
    (57) exp -> . IDENTIFIER Binop NUMBER
    (58) exp -> . FALSE
    (59) exp -> . NEW IDENTIFIER LPAREN RPAREN
    (60) exp -> . NEW INT LBRACKET exp RBRACKET
    (61) exp -> . NEW IDENTIFIER LBRACKET exp RBRACKET
    (32) Refrence -> . THIS
    (33) Refrence -> . IDENTIFIER
    (21) Type -> . PrimeType
    (22) Type -> . ClassType
    (23) Type -> . arraytype
    (62) Unop -> . NOT
    (63) Unop -> . MINUS
    (24) PrimeType -> . INT
    (25) PrimeType -> . BOOLEAN
    (26) PrimeType -> . VOID
    (27) ClassType -> . IDENTIFIER
    (28) arraytype -> . INT LBRACKET RBRACKET
    (29) arraytype -> . ClassType LBRACKET RBRACKET

    LPAREN          shift and go to state 9
    NUMBER          shift and go to state 11
    TRUE            shift and go to state 12
    IDENTIFIER      shift and go to state 6
    FALSE           shift and go to state 13
    NEW             shift and go to state 14
    THIS            shift and go to state 16
    NOT             shift and go to state 20
    MINUS           shift and go to state 21
    INT             shift and go to state 15
    BOOLEAN         shift and go to state 22
    VOID            shift and go to state 23

    exp                            shift and go to state 43
    Refrence                       shift and go to state 7
    Type                           shift and go to state 8
    Unop                           shift and go to state 10
    PrimeType                      shift and go to state 17
    ClassType                      shift and go to state 18
    arraytype                      shift and go to state 19

state 10

    (52) exp -> Unop . exp
    (47) exp -> . Refrence
    (48) exp -> . Type exp
    (49) exp -> . Refrence LBRACKET exp RBRACKET
    (50) exp -> . Refrence LPAREN RPAREN
    (51) exp -> . Refrence LPAREN argumentlist RPAREN
    (52) exp -> . Unop exp
    (53) exp -> . exp Binop exp
    (54) exp -> . LPAREN exp RPAREN
    (55) exp -> . NUMBER
    (56) exp -> . TRUE
    (57) exp -> . IDENTIFIER Binop NUMBER
    (58) exp -> . FALSE
    (59) exp -> . NEW IDENTIFIER LPAREN RPAREN
    (60) exp -> . NEW INT LBRACKET exp RBRACKET
    (61) exp -> . NEW IDENTIFIER LBRACKET exp RBRACKET
    (32) Refrence -> . THIS
    (33) Refrence -> . IDENTIFIER
    (21) Type -> . PrimeType
    (22) Type -> . ClassType
    (23) Type -> . arraytype
    (62) Unop -> . NOT
    (63) Unop -> . MINUS
    (24) PrimeType -> . INT
    (25) PrimeType -> . BOOLEAN
    (26) PrimeType -> . VOID
    (27) ClassType -> . IDENTIFIER
    (28) arraytype -> . INT LBRACKET RBRACKET
    (29) arraytype -> . ClassType LBRACKET RBRACKET

    LPAREN          shift and go to state 9
    NUMBER          shift and go to state 11
    TRUE            shift and go to state 12
    IDENTIFIER      shift and go to state 6
    FALSE           shift and go to state 13
    NEW             shift and go to state 14
    THIS            shift and go to state 16
    NOT             shift and go to state 20
    MINUS           shift and go to state 21
    INT             shift and go to state 15
    BOOLEAN         shift and go to state 22
    VOID            shift and go to state 23

    Unop                           shift and go to state 10
    exp                            shift and go to state 44
    Refrence                       shift and go to state 7
    Type                           shift and go to state 8
    PrimeType                      shift and go to state 17
    ClassType                      shift and go to state 18
    arraytype                      shift and go to state 19

state 11

    (55) exp -> NUMBER .

    PLUS            reduce using rule 55 (exp -> NUMBER .)
    MINUS           reduce using rule 55 (exp -> NUMBER .)
    TIMES           reduce using rule 55 (exp -> NUMBER .)
    DIVIDE          reduce using rule 55 (exp -> NUMBER .)
    EQ              reduce using rule 55 (exp -> NUMBER .)
    NOT_EQ          reduce using rule 55 (exp -> NUMBER .)
    LT              reduce using rule 55 (exp -> NUMBER .)
    GT              reduce using rule 55 (exp -> NUMBER .)
    LE              reduce using rule 55 (exp -> NUMBER .)
    GE              reduce using rule 55 (exp -> NUMBER .)
    AND             reduce using rule 55 (exp -> NUMBER .)
    NOT             reduce using rule 55 (exp -> NUMBER .)
    $end            reduce using rule 55 (exp -> NUMBER .)
    RPAREN          reduce using rule 55 (exp -> NUMBER .)
    RBRACKET        reduce using rule 55 (exp -> NUMBER .)
    COMMA           reduce using rule 55 (exp -> NUMBER .)
    SEMICOLON       reduce using rule 55 (exp -> NUMBER .)


state 12

    (56) exp -> TRUE .

    PLUS            reduce using rule 56 (exp -> TRUE .)
    MINUS           reduce using rule 56 (exp -> TRUE .)
    TIMES           reduce using rule 56 (exp -> TRUE .)
    DIVIDE          reduce using rule 56 (exp -> TRUE .)
    EQ              reduce using rule 56 (exp -> TRUE .)
    NOT_EQ          reduce using rule 56 (exp -> TRUE .)
    LT              reduce using rule 56 (exp -> TRUE .)
    GT              reduce using rule 56 (exp -> TRUE .)
    LE              reduce using rule 56 (exp -> TRUE .)
    GE              reduce using rule 56 (exp -> TRUE .)
    AND             reduce using rule 56 (exp -> TRUE .)
    NOT             reduce using rule 56 (exp -> TRUE .)
    $end            reduce using rule 56 (exp -> TRUE .)
    RPAREN          reduce using rule 56 (exp -> TRUE .)
    RBRACKET        reduce using rule 56 (exp -> TRUE .)
    COMMA           reduce using rule 56 (exp -> TRUE .)
    SEMICOLON       reduce using rule 56 (exp -> TRUE .)


state 13

    (58) exp -> FALSE .

    PLUS            reduce using rule 58 (exp -> FALSE .)
    MINUS           reduce using rule 58 (exp -> FALSE .)
    TIMES           reduce using rule 58 (exp -> FALSE .)
    DIVIDE          reduce using rule 58 (exp -> FALSE .)
    EQ              reduce using rule 58 (exp -> FALSE .)
    NOT_EQ          reduce using rule 58 (exp -> FALSE .)
    LT              reduce using rule 58 (exp -> FALSE .)
    GT              reduce using rule 58 (exp -> FALSE .)
    LE              reduce using rule 58 (exp -> FALSE .)
    GE              reduce using rule 58 (exp -> FALSE .)
    AND             reduce using rule 58 (exp -> FALSE .)
    NOT             reduce using rule 58 (exp -> FALSE .)
    $end            reduce using rule 58 (exp -> FALSE .)
    RPAREN          reduce using rule 58 (exp -> FALSE .)
    RBRACKET        reduce using rule 58 (exp -> FALSE .)
    COMMA           reduce using rule 58 (exp -> FALSE .)
    SEMICOLON       reduce using rule 58 (exp -> FALSE .)


state 14

    (59) exp -> NEW . IDENTIFIER LPAREN RPAREN
    (60) exp -> NEW . INT LBRACKET exp RBRACKET
    (61) exp -> NEW . IDENTIFIER LBRACKET exp RBRACKET

    IDENTIFIER      shift and go to state 45
    INT             shift and go to state 46


state 15

    (24) PrimeType -> INT .
    (28) arraytype -> INT . LBRACKET RBRACKET

    LPAREN          reduce using rule 24 (PrimeType -> INT .)
    NUMBER          reduce using rule 24 (PrimeType -> INT .)
    TRUE            reduce using rule 24 (PrimeType -> INT .)
    IDENTIFIER      reduce using rule 24 (PrimeType -> INT .)
    FALSE           reduce using rule 24 (PrimeType -> INT .)
    NEW             reduce using rule 24 (PrimeType -> INT .)
    THIS            reduce using rule 24 (PrimeType -> INT .)
    NOT             reduce using rule 24 (PrimeType -> INT .)
    MINUS           reduce using rule 24 (PrimeType -> INT .)
    INT             reduce using rule 24 (PrimeType -> INT .)
    BOOLEAN         reduce using rule 24 (PrimeType -> INT .)
    VOID            reduce using rule 24 (PrimeType -> INT .)
    LBRACKET        shift and go to state 47


state 16

    (32) Refrence -> THIS .

    LBRACKET        reduce using rule 32 (Refrence -> THIS .)
    LPAREN          reduce using rule 32 (Refrence -> THIS .)
    PLUS            reduce using rule 32 (Refrence -> THIS .)
    MINUS           reduce using rule 32 (Refrence -> THIS .)
    TIMES           reduce using rule 32 (Refrence -> THIS .)
    DIVIDE          reduce using rule 32 (Refrence -> THIS .)
    EQ              reduce using rule 32 (Refrence -> THIS .)
    NOT_EQ          reduce using rule 32 (Refrence -> THIS .)
    LT              reduce using rule 32 (Refrence -> THIS .)
    GT              reduce using rule 32 (Refrence -> THIS .)
    LE              reduce using rule 32 (Refrence -> THIS .)
    GE              reduce using rule 32 (Refrence -> THIS .)
    AND             reduce using rule 32 (Refrence -> THIS .)
    NOT             reduce using rule 32 (Refrence -> THIS .)
    $end            reduce using rule 32 (Refrence -> THIS .)
    RPAREN          reduce using rule 32 (Refrence -> THIS .)
    RBRACKET        reduce using rule 32 (Refrence -> THIS .)
    COMMA           reduce using rule 32 (Refrence -> THIS .)
    SEMICOLON       reduce using rule 32 (Refrence -> THIS .)
    ASSIGN          reduce using rule 32 (Refrence -> THIS .)


state 17

    (21) Type -> PrimeType .

